# pi-mesh-node-lite

./: .gitignore  README.md  SETUP.md  landing-server.py  landing.html  notes.html  rns-index.html  rns-web.py  setup-deploy.sh  setup-desktop.sh  setup-pi-1.sh  setup-pi-2.sh  setup-pi-3.sh
sdr-ws/: Cargo.toml
sdr-ws/src/: index.html  main.rs
services/: landing.service  rns-map.service  rns-web.service  rnsd.service  sdr-ws.service
